--- a/作業題目.ipynb
+++ b/作業題目.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {
     "id": "NfVTcwauD3rg"
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {
     "id": "QrOaxfmeEpvo"
    },
@@ -47,39 +47,66 @@
      "data": {
       "text/plain": [
        "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16,\n",
-       "       17, 18, 19])"
+       "       17, 18, 19, 20])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#1.生成一個等差數列，首數為0，尾數為20，公差為1的數列。\n",
-    "np.arange(0, 20, 1)"
+    "all_array = np.arange(0, 21, 1)\n",
+    "all_array"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "id": "5FFeFSvoEtRP"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0,  2,  4,  6,  8, 10, 12, 14, 16, 18, 20])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#2.呈上題，將以上數列取出偶數。\n"
+    "#2.呈上題，將以上數列取出偶數。\n",
+    "even_array = all_array[::2]\n",
+    "even_array"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "id": "7-HcNGFsFD-_"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 3,  6,  9, 12, 15, 18])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#3.呈1題，將數列取出3的倍數。\n"
+    "#3.呈1題，將數列取出3的倍數。\n",
+    "odd_array = all_array[3::3]\n",
+    "odd_array"
    ]
   },
   {
