--- a/作業_Day3.ipynb
+++ b/作業_Day3.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "id": "knBzIEbisYO_"
    },
@@ -46,10 +46,10 @@
     {
      "data": {
       "text/plain": [
-       "3.0"
+       "60.0"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,22 +60,37 @@
     "V1 = 20000\n",
     "V0 = 20\n",
     "a = np.log10(V1/V0)\n",
-    "a"
+    "20*a"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "id": "5Vknqg8esbl_"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.09999999999999999"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#2.30分貝的聲壓會是50分貝的幾倍?\n",
     "#公式移項過後可以得到 V1 = ?\n",
     "#請寫下程式\n",
+    "#V1 = 10^(GdB/20)*V0\n",
     "V2 = 30\n",
-    "b = np.log10(20000/)"
+    "b = 10**(V2/20)*V0\n",
+    "V3 = 50\n",
+    "c = 10**(V3/20)*V0\n",
+    "b/c"
    ]
   },
   {
