--- a/作業_Day4.ipynb
+++ b/作業_Day4.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {
     "executionInfo": {
      "elapsed": 818,
@@ -68,14 +68,11 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([False,  True,  True, False, False,  True])"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
     }
    ],
    "source": [
@@ -83,12 +80,13 @@
     "english_score = np.array([55,89,76,65,48,70])\n",
     "math_score = np.array([60,85,60,68,55,60])\n",
     "chinese_score = np.array([65,90,82,72,66,77])\n",
-    "np.greater(english_score, math_score)"
+    "a = np.greater(english_score, math_score)\n",
+    "print(np.sum(a))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "metadata": {
     "executionInfo": {
      "elapsed": 1269,
@@ -105,19 +103,19 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([1, 1, 1, 1, 1, 1])"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
     }
    ],
    "source": [
     "#2.是否全班同學最高分都是國文?\n",
-    "np.greater(chinese_score, english_score, math_score)"
+    "b = np.greater(chinese_score, english_score, math_score)\n",
+    "np.sum(b)\n",
+    "if np.sum(b) == 6:\n",
+    "    print('True')"
    ]
   },
   {
