--- a/作業_Day7.ipynb
+++ b/作業_Day7.ipynb
@@ -115,10 +115,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "id": "5BaVZFRvpXZo"
    },
+   "outputs": [],
+   "source": [
+    "w = np.linalg.svd(array1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[-0.91663818, -0.39971796],\n",
+       "        [-0.39971796,  0.91663818]]),\n",
+       " array([13.94721714,  1.86417116]),\n",
+       " array([[-0.74319741, -0.6690722 ],\n",
+       "        [-0.6690722 ,  0.74319741]]))"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "w"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
