--- a/作業_Day8.ipynb
+++ b/作業_Day8.ipynb
@@ -66,46 +66,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "id": "ElavkYgwVftG"
    },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "closing parenthesis '}' does not match opening parenthesis '(' (<ipython-input-6-24af0d9bd630>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-6-24af0d9bd630>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    dt = np.dtype({'name':('name_list', 'sex_list', 'weight_list', 'rank_list', 'myopia_list'), 'formats':(('U', 'U', 'f', 'int', '?')}\u001b[0m\n\u001b[0m                                                                                                                                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m closing parenthesis '}' does not match opening parenthesis '('\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#1. 將上列list依照['name', 'sex', 'weight', 'rank', 'myopia']順序擺入array，並且資料型態順序擺入[Unicode,Unicode,float,int,boolean]\n",
-    "dt = np.dtype({'name':('name_list', 'sex_list', 'weight_list', 'rank_list', 'myopia_list'), 'formats':(('U', 'U', 'f', 'int', '?')}\n",
-    "c = np.zeros(4, dtype=dt)"
+    "student_type = {'names':('name', 'sex', 'weight', 'rank', 'myopia'), 'formats':('U10','U6','f8','i4','?')}\n",
+    "students = np.zeros(8,dtype=student_type)\n",
+    "students['name'] = name_list\n",
+    "students['sex'] = sex_list\n",
+    "students['weight'] = weight_list\n",
+    "students['rank'] = rank_list\n",
+    "students['myopia'] = myopia_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "id": "N-xffNSVWbP1"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "69.8375"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#2. 呈上題，將array中體重(weight)數據集取出算出全部平均體重"
+    "#2. 呈上題，將array中體重(weight)數據集取出算出全部平均體重\n",
+    "np.mean(students['weight'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "id": "_LhLg8RiWwEm"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "77.18333333333332"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#3. 呈上題，進一步算出男生(sex欄位是boy)平均體重"
+    "#3. 呈上題，進一步算出男生(sex欄位是boy)平均體重\n",
+    "boy_index = np.where(students['sex']=='boy')[0]\n",
+    "np.mean(students['weight'][boy_index])"
    ]
   },
   {
